# NCEPLIBS-landsfcutil

./: CMakeLists.txt  LICENSE.md  Makefile.in  README  README.md  Release_Notes.landsfcutil.v2.1.0.txt  build_landsfcutil.sh  configure  configure.ac  ll2xy_utils.f  make_landsfcutil_lib.sh  make_landsfcutil_lib_wcoss-cray.sh  makelib.ksh  modulefile.template
.github/workflows/: Intel.yml  Spack.yml  main.yml
4byte/: CMakeLists.txt
Conf/: AAA_rename_conf.sh  Landsfcutil_gnu_General.sh  Landsfcutil_intel_Cray.sh  Landsfcutil_intel_Dell.sh  Landsfcutil_intel_Gaea.sh  Landsfcutil_intel_General.sh  Landsfcutil_intel_Hera.sh  Landsfcutil_intel_Theia.sh  Landsfcutil_intel_Wcoss.sh
cmake/: PackageConfig.cmake.in
double/: CMakeLists.txt
reg_tests/snow2mdl/src/: driver.f  makefile.aix  model_grid.f  program_setup.f  sno2mdl.f  snow2mdl.f  snowdat.f
spack/: README  package.py
src/: CMakeLists.txt  Makefile  Makefile.in  ll2xy_utils.f  make.dependencies  make.filelist  makefile  makefile.aix.conf  makefile.conf_4  makefile.conf_d  makefile.linux.conf  makelib.ksh
tests/: CMakeLists.txt
